# skybraza

./: .gitignore  README.md  app.py  bcb_hints_loader.py  db.py  evidence_requests.py  excel_export.py  explicação aplicação.txt  index.py  logging_config.py  main.py  matrix_loader.py  package.json  pyproject.toml  questionnaire_loader.py  rate_limit.py  readiness.py  requirements-api.txt  requirements.txt  result_email.py  rules_engine.py  run_web.ps1  scope_fixtures.py  scope_narrative.py  scope_pdf.py  serve_web.py  vercel.json
.streamlit/: config.toml  secrets.toml.example
api/: __init__.py  index.py  main.py
laws/: AUDITOR_EVIDENCE_BY_INCISO.yaml  BCB-resolucao-ciberseguranca-nuvem_PT_IN701-art4-XII.txt  BCB_REPORT_HINTS.yaml  COVERAGE_MATRIX.yaml  FASE0_REVISAO_CORRETORA.txt  FASE_2_PRODUTO.txt  FASE_ABCD_REVISAO_CORRETORA.txt  FASE_A_INVENTARIO.txt  FASE_B_MODELO_DADOS.txt  FASE_CORRETORA_PLANO_ACAO.txt  FASE_D_PRONTIDAO_E_EXPORT.txt  FASE_E_CONSOLIDACAO.txt  JORNADA_2_EVIDENCIAS_PLANO.txt  MAPEAMENTO_IN701_REF_RES520.txt  MAPEAMENTO_INFORMACOES_TEORICAS_INTERMEDIARIA.txt  PLANO_REVISAO_COMPLETA_ESCOPO_IN701.txt  REVISAO_EXEC_FASE1_MAPA_SISTEMA.txt  REVISAO_EXEC_FASE2_MATRIZES.txt  REVISAO_EXEC_FASE3_QUESTIONARIOS.txt  REVISAO_FLUXO_QUESTIONARIO_INTERMEDIARIA.txt  ROTEIRO_FASES.txt  Res520-art29-31_IN701-art4-I-a-b.txt  Res520-art32-33_IN701-art4-II.txt  Res520-art34_IN701-art4-IV.txt  Res520-art43_IN701-art4-V.txt  Res520-art47-50_IN701-art4-VIII.txt  Res520-art48_IN701-art4-VI-b.txt  Res520-art55-58_IN701-art4-XI.txt  Res520-art60-63_IN701-art4-VI-a.txt  (+29 more)
(+68 files in other folders)
